--- a/Home.css
+++ b/Home.css
@@ -2035,7 +2035,7 @@
   background-image: url("images/la_kavin_et_6-20230119-00012.jpg");
   background-position: 50% 50%;
   transition-duration: 0.5s;
-  box-shadow: 0 0 0 rgba(0,0,0,0);
+  box-shadow: 0px 0px 0px rgba(0,0,0,0);
   text-shadow: rgba(var(---r),var(---g),var(---b),0);
   transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
   margin: 0 auto;
@@ -2057,7 +2057,7 @@
   background-image: url("images/IMG_20230119_234408_0122.jpg");
   background-position: 50% 50%;
   transition-duration: 0.5s;
-  box-shadow: 0 0 0 rgba(0,0,0,0);
+  box-shadow: 0px 0px 0px rgba(0,0,0,0);
   text-shadow: rgba(var(---r),var(---g),var(---b),0);
   transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
   margin: 0 auto;
@@ -2079,7 +2079,7 @@
   background-image: url("images/IMG-20230118-WA00042.jpg");
   background-position: 50% 50%;
   transition-duration: 0.5s;
-  box-shadow: 0 0 0 rgba(0,0,0,0);
+  box-shadow: 0px 0px 0px rgba(0,0,0,0);
   text-shadow: rgba(var(---r),var(---g),var(---b),0);
   transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
   margin: 0 auto;
@@ -2101,7 +2101,7 @@
   background-image: url("images/IMG_20230120_012508_0082.jpg");
   background-position: 50% 50%;
   transition-duration: 0.5s;
-  box-shadow: 0 0 0 rgba(0,0,0,0);
+  box-shadow: 0px 0px 0px rgba(0,0,0,0);
   text-shadow: rgba(var(---r),var(---g),var(---b),0);
   transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
   margin: 0 auto;
