--- a/nicepage.css
+++ b/nicepage.css
@@ -39099,7 +39099,12 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-right: 0;
   }
 }
-
+@media (max-width: 991px) {
+  .u-header .u-nav-2 {
+    font-size: 2.25rem;
+    margin: 68px auto 0;
+  }
+}
 
 
  .u-footer {
