--- a/nicepage.css
+++ b/nicepage.css
@@ -39060,13 +39060,13 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 115px;
+  min-height: 116px;
 }
 
 .u-header .u-image-1 {
-  width: 84px;
-  height: 104px;
-  margin: 5px auto 0 17px;
+  width: 115px;
+  height: 115px;
+  margin: 0 auto 0 0;
 }
 
 .u-header .u-logo-image-1 {
@@ -39075,7 +39075,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: -71px 0 41px auto;
+  margin: -75px 0 40px auto;
 }
 
 .u-header .u-nav-1 {
@@ -39089,24 +39089,38 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 1.25rem;
 }
 @media (max-width: 1199px) {
+  .u-header .u-sheet-1 {
+    min-height: 118px;
+  }
+
   .u-header .u-image-1 {
-    width: 84px;
+    width: 117px;
+    height: 117px;
   }
 
   .u-header .u-menu-1 {
     width: auto;
-    margin-top: -71px;
-    margin-right: 0;
+    margin-top: -75px;
   }
 }
 @media (max-width: 991px) {
+  .u-header .u-image-1 {
+    width: 116px;
+    height: 116px;
+  }
+
   .u-header .u-nav-2 {
     font-size: 2.25rem;
     margin: 68px auto 0;
   }
 }
 
-
+@media (max-width: 575px) {
+  .u-header .u-image-1 {
+    width: 106px;
+    height: 106px;
+  }
+}
  .u-footer {
   background-image: none;
 }
